pre-mao names for chinese VPs

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -287,8 +287,7 @@
  VICTORY_POINTS_12100:0 "Nador"
  VICTORY_POINTS_989:0 "Oujda"
  VICTORY_POINTS_957:0 "Vladivostok"
- VICTORY_POINTS_6989:0 "Ussuriysk"
- VICTORY_POINTS_6961:0 "Nachodka"
+ VICTORY_POINTS_6989:0 "Nikolskoye"
  VICTORY_POINTS_664:0 "Iman"
  VICTORY_POINTS_9604:0 "Imperatorskaya Gavan"
  VICTORY_POINTS_12559:0 "Nikolayevsk"
@@ -411,18 +410,20 @@
  VICTORY_POINTS_4709:0 "Urumqi"
  VICTORY_POINTS_5033:0 "Lhasa"
  VICTORY_POINTS_11913:0 "Tianjing"
- VICTORY_POINTS_4205:0 "Weihai"
- VICTORY_POINTS_10102:0 "Zibo"
- VICTORY_POINTS_12074:0 "Weifang"
+ VICTORY_POINTS_4001:0 "Yangzhou"
+ VICTORY_POINTS_4205:0 "Weihaiwei"
+ VICTORY_POINTS_10102:0 "Zhangqiu"
+ VICTORY_POINTS_12074:0 "Qingzhou"
+ VICTORY_POINTS_7105:0 "Laizhou"
  VICTORY_POINTS_4037:0 "Tai'an"
  VICTORY_POINTS_1124:0 "Linyi"
- VICTORY_POINTS_10043:0 "Jining"
- VICTORY_POINTS_1200:0 "Yantai"
+ VICTORY_POINTS_10043:0 "Yanzhou"
+ VICTORY_POINTS_1104:0 "Dengzhou"
  VICTORY_POINTS_6999:0 "Chongqing"
  VICTORY_POINTS_7014:0 "Shanghai"
  VICTORY_POINTS_9843:0 "Beijing"
  VICTORY_POINTS_1047:0 "Guangzhou"
- VICTORY_POINTS_10335:0 "Huaihua"
+ VICTORY_POINTS_10335:0 "Jiangkou"
  VICTORY_POINTS_1069:0 "Jinan"
  VICTORY_POINTS_3992:0 "Nanchang"
  VICTORY_POINTS_4196:0 "Fuzhou"
@@ -430,32 +431,32 @@
  VICTORY_POINTS_4619:0 "Wuchang"
  VICTORY_POINTS_4925:0 "Chengdu"
  VICTORY_POINTS_7071:0 "Xiamen"
+ VICTORY_POINTS_10010:0 "Zhangzhou"
  VICTORY_POINTS_7097:0 "Changsha"
- VICTORY_POINTS_12350:0 "Hengyang"
- VICTORY_POINTS_9999:0 "Yueyang"
+ VICTORY_POINTS_12350:0 "Hengshan"
+ VICTORY_POINTS_9999:0 "Yuezhou"
  VICTORY_POINTS_10377:0 "Shaoyang"
  VICTORY_POINTS_1628:0 "Jiujiang"
  VICTORY_POINTS_4183:0 "Ganzhou"
- VICTORY_POINTS_7054:0 "Shangrao"
- VICTORY_POINTS_10057:0 "Jian"
+ VICTORY_POINTS_7054:0 "Guangxin"
+ VICTORY_POINTS_10057:0 "Ji'an"
+ VICTORY_POINTS_10084:0 "Tingzhou"
  VICTORY_POINTS_9984:0 "Linchuan"
  VICTORY_POINTS_7141:0 "Meizhou"
  VICTORY_POINTS_7027:0 "Putian"
  VICTORY_POINTS_1006:0 "Longyan"
- VICTORY_POINTS_10042:0 "Nanping"
+ VICTORY_POINTS_10042:0 "Yanping"
  VICTORY_POINTS_1055:0 "Wenzhou"
  VICTORY_POINTS_11920:0 "Jinhua"
- VICTORY_POINTS_1153:0 "Jingdezhen"
- VICTORY_POINTS_1099:0 "Wuhu"
- VICTORY_POINTS_1125:0 "Huangshan"
- VICTORY_POINTS_11937:0 "Tongling"
+ VICTORY_POINTS_1099:0 "Taiping"
+ VICTORY_POINTS_1125:0 "Huizhou"
+ VICTORY_POINTS_11937:0 "Chizhou"
  VICTORY_POINTS_11916:0 "Huainan"
- VICTORY_POINTS_10079:0 "Fuyang"
- VICTORY_POINTS_1001:0 "Bengbu"
+ VICTORY_POINTS_10079:0 "Yingzhou"
+ VICTORY_POINTS_11916:0 "Fengyang"
  VICTORY_POINTS_10064:0 "Lu'an"
- VICTORY_POINTS_1076:0 "Huai'an"
+ VICTORY_POINTS_4123:0 "Huai'an"
  VICTORY_POINTS_12055:0 "Xuzhou"
- VICTORY_POINTS_1029:0 "Lianyungang"
  VICTORY_POINTS_12067:0 "Yancheng"
  VICTORY_POINTS_7568:0 "Xinyang"
  VICTORY_POINTS_7656:0 "Kaifeng"
@@ -466,22 +467,22 @@
  VICTORY_POINTS_11981:0 "Guangzhouwan"
  VICTORY_POINTS_11983:0 "Yulin"
  VICTORY_POINTS_10004:0 "Fangchenggang"
- VICTORY_POINTS_7039:0 "Maoming"
+ VICTORY_POINTS_7039:0 "Gaozhou"
  VICTORY_POINTS_4152:0 "Wuzhou"
  VICTORY_POINTS_7108:0 "Shenzen"
  VICTORY_POINTS_7152:0 "Zhaoqing"
  VICTORY_POINTS_12095:0 "Qingyuan"
  VICTORY_POINTS_1162:0 "Heyuan"
  VICTORY_POINTS_9938:0 "Shantou"
- VICTORY_POINTS_9970:0 "Shaoguan"
+ VICTORY_POINTS_9970:0 "Shaozhou"
  VICTORY_POINTS_7095:0 "Liuzhou"
  VICTORY_POINTS_10459:0 "Bose"
  VICTORY_POINTS_4134:0 "Hechi"
  VICTORY_POINTS_1010:0 "Zunyi"
  VICTORY_POINTS_2067:0 "Liangshan"
  VICTORY_POINTS_7191:0 "Hangzhou"
- VICTORY_POINTS_7222:0 "Hefei"
- VICTORY_POINTS_9958:0 "Zhengzhou"
+ VICTORY_POINTS_7222:0 "Luyang"
+ VICTORY_POINTS_9958:0 "Zhongmu"
  VICTORY_POINTS_10000:0 "Tsingtao"
  VICTORY_POINTS_10068:0 "Tianjin"
  VICTORY_POINTS_10404:0 "Guilin"
@@ -517,6 +518,7 @@
  VICTORY_POINTS_11932:0 "Naha"
  VICTORY_POINTS_1150:0 "Port Arthur"
  VICTORY_POINTS_4572:0 "Changchun"
+ VICTORY_POINTS_7663:0 "Jilin"
  VICTORY_POINTS_4052:0 "Pyongyang"
  VICTORY_POINTS_4056:0 "Busan"
  VICTORY_POINTS_7125:0 "Seoul"
@@ -802,9 +804,10 @@
  VICTORY_POINTS_2489:0 "Truk"
  VICTORY_POINTS_12103:0 "Koror"
  VICTORY_POINTS_11980:0 "Dezhou"
- VICTORY_POINTS_9969:0 "Cangzhou"
+ VICTORY_POINTS_9969:0 "Cangxiang"
  VICTORY_POINTS_1575:0 "Yuncheng"
- VICTORY_POINTS_1139:0 "Xinxiang"
+ VICTORY_POINTS_1139:0 "Weihui"
+ VICTORY_POINTS_4606:0 "Huaiqing"
  VICTORY_POINTS_7158:0 "Datong"
  VICTORY_POINTS_3427:0 "Ordos"
  VICTORY_POINTS_4634:0 "Linfen"
@@ -832,23 +835,24 @@
  VICTORY_POINTS_1316:0 "Pontianak"
  VICTORY_POINTS_4279:0 "Singkawang"
  VICTORY_POINTS_1373:0 "Djambi"
- VICTORY_POINTS_7446:0 "Kunming"
- VICTORY_POINTS_10346:0 "Yuxi"
- VICTORY_POINTS_12898:0 "Baoshan"
+ VICTORY_POINTS_7446:0 "Qutsing"
+ VICTORY_POINTS_10346:0 "Yunnan-Fu"
+ VICTORY_POINTS_12898:0 "Yongchang"
  VICTORY_POINTS_5072:0 "Zhaotong"
- VICTORY_POINTS_10413:0 "Xishuangbanna"
+ VICTORY_POINTS_10413:0 "Jinghong"
  VICTORY_POINTS_4501:0 "Mengzi"
  VICTORY_POINTS_12356:0 "Yan'an"
  VICTORY_POINTS_3900:0 "Qinhuangdao"
- VICTORY_POINTS_12043:0 "Tangshan"
+ VICTORY_POINTS_3830:0 "Funing"
+ VICTORY_POINTS_12043:0 "Laoting"
  VICTORY_POINTS_12156:0 "Tongchuan"
  VICTORY_POINTS_7314:0 "Yulin"
  VICTORY_POINTS_10397:0 "Zhangjiakou"
- VICTORY_POINTS_10421:0 "Changzhi"
+ VICTORY_POINTS_6904:0 "Xuanhua"
  VICTORY_POINTS_11801:0 "Chengde"
  VICTORY_POINTS_10426:0 "Chifeng"
  VICTORY_POINTS_12078:0 "Yangquan"
- VICTORY_POINTS_4174:0 "Taiyuan"
+ VICTORY_POINTS_1519:0 "Taiyuan"
  VICTORY_POINTS_12026:0 "Baoding"
  VICTORY_POINTS_377:0 "Cardiff"
  VICTORY_POINTS_495:0 "Dortmund"
@@ -862,7 +866,7 @@
  VICTORY_POINTS_6831:0 "Pescara"
  VICTORY_POINTS_1005:0 "Antalya"
  VICTORY_POINTS_1048:0 "Cádiz"
- VICTORY_POINTS_1070:0 "Haikou"
+ VICTORY_POINTS_1070:0 "Xiuying"
  VICTORY_POINTS_1273:0 "Goa"
  VICTORY_POINTS_1440:0 "San Juan"
  VICTORY_POINTS_1751:0 "Azores"
@@ -880,25 +884,24 @@
  VICTORY_POINTS_4823:0 "Altay"
  VICTORY_POINTS_1783:0 "Karamay"
  VICTORY_POINTS_987:0 "Liaoyang"
- VICTORY_POINTS_3877:0 "Tongliao"
- VICTORY_POINTS_4633:0 "Songyuan"
- VICTORY_POINTS_4506:0 "Daqing"
+ VICTORY_POINTS_4633:0 "Ningjiang"
+ VICTORY_POINTS_1645:0 "Youcheng"
  VICTORY_POINTS_1588:0 "Qiqihar"
- VICTORY_POINTS_7832:0 "Heihe"
- VICTORY_POINTS_9866:0 "Baishan"
+ VICTORY_POINTS_7832:0 "Aigun"
+ VICTORY_POINTS_3888:0 "Tonghua"
  VICTORY_POINTS_6981:0 "Andong"
  VICTORY_POINTS_8104:0 "Chamdo"
- VICTORY_POINTS_944:0 "Yanbian"
- VICTORY_POINTS_973:0 "Mudanjiang"
- VICTORY_POINTS_6811:0 "Jixi"
- VICTORY_POINTS_10463:0 "Jiamusi"
+ VICTORY_POINTS_3944:0 "Hunchun"
+ VICTORY_POINTS_9766:0 "Ninguta"
+ VICTORY_POINTS_3815:0 "Jixi"
+ VICTORY_POINTS_10463:0 "Sanxing"
  VICTORY_POINTS_8041:0 "Nyingchi"
  VICTORY_POINTS_4704:0 "Kumul"
  VICTORY_POINTS_2015:0 "Kaxgar"
  VICTORY_POINTS_8112:0 "Hotan"
  VICTORY_POINTS_7949:0 "Aksu"
  VICTORY_POINTS_2028:0 "Jiuquan"
- VICTORY_POINTS_10724:0 "Yinchuan"
+ VICTORY_POINTS_10724:0 "Ningxia"
  VICTORY_POINTS_3456:0 "Karachi"
  VICTORY_POINTS_3501:0 "Dover"
  VICTORY_POINTS_3838:0 "Ajáccio"
@@ -945,6 +948,9 @@
  VICTORY_POINTS_9907:0 "Florence"
  VICTORY_POINTS_9945:1 "Ceuta"
  VICTORY_POINTS_9974:0 "Ningbo"
+ VICTORY_POINTS_1096:0 "Shaoxing"
+ VICTORY_POINTS_1168:0 "Tangzhou"
+ VICTORY_POINTS_10069:0 "Fuding"
  VICTORY_POINTS_9975:0 "Amedabade"
  VICTORY_POINTS_9994:0 "Bizerte"
  VICTORY_POINTS_10007:0 "Rhodes"
@@ -997,10 +1003,10 @@
  VICTORY_POINTS_12758:0 "Medina"
  VICTORY_POINTS_12883:0 "Jeddah"
  VICTORY_POINTS_10750:0 "Haixi"
- VICTORY_POINTS_10490:0 "Hainan"
  VICTORY_POINTS_1882:0 "Golog"
  VICTORY_POINTS_4403:0 "Gannan"
  VICTORY_POINTS_1933:0 "Tianshui"
+ VICTORY_POINTS_1647:0 "Pingliang"
  VICTORY_POINTS_12991:0 "Mogadíscio"
  VICTORY_POINTS_6318:0 "Manchester"
  VICTORY_POINTS_9315:0 "Sheffield"
@@ -1019,18 +1025,17 @@
  VICTORY_POINTS_7874:0 "Petropavlovsk"
  VICTORY_POINTS_1292:0 "Kurgan"
  VICTORY_POINTS_4824:0 "Tyumen"
- VICTORY_POINTS_4745:0 "Hulunbuir"
+ VICTORY_POINTS_4745:0 "Hailar"
  VICTORY_POINTS_12537:0 "Huzhong"
  VICTORY_POINTS_11752:0 "Zhangbei"
  VICTORY_POINTS_9234:0 "Staraya Russa"
  VICTORY_POINTS_11048:0 "Borovichi"
- VICTORY_POINTS_7418:0 "Ankang"
- VICTORY_POINTS_12414:0 "Enshi"
+ VICTORY_POINTS_7418:0 "Hanbin"
+ VICTORY_POINTS_12414:0 "Shinan"
  VICTORY_POINTS_10006:0 "Xiangxi"
- VICTORY_POINTS_1474:0 "Tongren"
  VICTORY_POINTS_12274:0 "Nanchong"
  VICTORY_POINTS_10034:0 "Suzhou"
- VICTORY_POINTS_13142:0 "Changzhou"
+ VICTORY_POINTS_13142:0 "Wujin"
  VICTORY_POINTS_11982:0 "Zhenjiang"
  VICTORY_POINTS_1976:0 "Xi'an"
  VICTORY_POINTS_10474:0 "Xiangyang"
@@ -1136,12 +1141,11 @@
  VICTORY_POINTS_480:0 "Terneuzen"
  VICTORY_POINTS_11562:0 "Maastricht"
  VICTORY_POINTS_9403:0 "Enschede"
- VICTORY_POINTS_6898:0 "Chaoyang"
- VICTORY_POINTS_6837:0 "Huludao"
+ VICTORY_POINTS_934:0 "Chaoyang"
+ VICTORY_POINTS_6837:0 "Ningyuen"
  VICTORY_POINTS_11764:0 "Yingkou"
  VICTORY_POINTS_9835:0 "Jinzhou"
  VICTORY_POINTS_2022:0 "Lanzhou"
- VICTORY_POINTS_4592:0 "Suihua"
  VICTORY_POINTS_6668:0 "Besancon"
  VICTORY_POINTS_11535:0 "Caen"
  VICTORY_POINTS_3655:0 "Bourges"
