--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -326,7 +326,7 @@
  STATE_325:0 "Yunnan"
  STATE_326:0 "Hong Kong"
  STATE_327:0 "Manila"
- STATE_328:0 "Kirin"
+ STATE_328:0 "Jilin"
  STATE_329:0 "Tannu Tuva"
  STATE_330:0 "Uuls"
  STATE_331:0 "Newfoundland"
