--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -1452,7 +1452,8 @@
   PB_RUS_The_Dark_Continent_tt:0 "If we supported §HAbyssinia§! then they will §Gbecome our subject§!, if we supported the §HSagallo Cossack Host§! instead then they will §Gbecome our subject§!"
   Great_Balkan_War_Fired:0 "The §YBalkan War§! has happened"
   PB_RUS_Safeguard_The_Artic_tt:0 "\nIf §YSweden§! agrees to sign a §GNon-Aggression Pact§! with us and §RFinland§! still exists then §RFinland§! will lose the §YScandinavian Support§! national spirit"
-
+ 
+  PB_RUS_Grestin_To_Do:0 "§CGrestin§! centric focus - code in the effects and availability checks when possible =)"
   #######################
   # ARMY SPIRITS
   #######################
