Russian Coup Event chain and WIP Alaska stuff

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -141,6 +141,10 @@
 
   fanatic_resolve:0 "Fanatic Resolve"
   
+  PB_RUS_Empress_Regent:0 "Empress Regent"
+  PB_RUS_Charitable:0 "Charitable"
+  PB_RUS_Sickly:0 "Sickly"
+
   ##########################
   # IDEAS
   ##########################
@@ -326,6 +330,46 @@
   Russian_Politics.13.d:0 ""
   Russian_Politics.13.a:0 "I suppose we're doing this the more direct way, then."
 
+  Russian_Politics.18.t:0 "The Regent endorses the Church"
+  Russian_Politics.18.d:0 ""
+  Russian_Politics.18.a:0 "We appreciate her opinions but..."
+  Russian_Politics.18.b:0 "Perhaps this is what we need?"
+
+  Russian_Politics.19.t:0 "Church and State"
+  Russian_Politics.19.d:0 "PLACEHOLDER The new regent creates a series of government offices staffed by church officials intended to serve as a balance to the secular elements of the Russian state"
+  Russian_Politics.19.a:0 "Perhaps we can compromise on secularism."
+
+  Russian_Politics.20.t:0 "Worrying Communications"
+  Russian_Politics.20.d:0 "PLACEHOLDER Loyalists within the Russian government discover a series of hidden communications being transmitted to certain units throughout the country and attempt to investigate."
+  Russian_Politics.20.a:0 "We need to look into this."
+
+  Russian_Politics.21.t:0 "Missing Weapons"
+  Russian_Politics.21.d:0 "PLACEHOLDER The Loyalist investigation discovers that a large amount of weapons and equipment have gone missing from the stockpiles, with records falsified by various unknown parties"
+  Russian_Politics.21.a:0 "Continue to probe the situation"
+  Russian_Politics.21.b:0 "We can't risk alienating the military"
+
+  Russian_Politics.22.t:0 "The Plot Thickens"
+  Russian_Politics.22.d:0 "PLACEHOLDER The investigation unearths ties between the missing weapons and several military officials, implicating them in a plot against the Duma."
+  Russian_Politics.22.a:0 "Have those involved arrested!"
+
+  Russian_Politics.23.t:0 "Communications Failure"
+  Russian_Politics.23.d:0 "PLACEHOLDER Some time after dropping the investigation, communications between Saint Petersburg and the rest of the country are cut. The loyalists have no idea what is happening. The Duma is panicked and deadlocked."
+  Russian_Politics.23.a:0 "Are we blind? Deploy the garrison!"
+
+  Russian_Politics.24.t:0 "March on Saint Petersburg"
+  Russian_Politics.24.d:0 "PLACEHOLDER The military, under the command of the Moscow Circle plot, invades the capital and seizes control of numerous parts of the government. The Duma is placed in lockdown with the Prime Minister arrested. The plotters announce their intention to temporarily dissolve the Duma."
+  Russian_Politics.24.a:0 "The Duma concedes to the military."
+  Russian_Politics.24.b:0 "Under public backlash, the military backs down."
+
+  Russian_Politics.25.t:0 "Things in Motion"
+  Russian_Politics.25.d:0 "PLACEHOLDER Facing the prospect of arrest, the coup plotters spring their plan preemtively. The Duma is seized, but communications with the outside are unable to be cut. The Prime Minister is left with the choice to concede to the plotters or shell the Duma."
+  Russian_Politics.25.a:0 "For the sake of peace, we must concede."
+  Russian_Politics.25.b:0 "Peace be damned, open fire!"
+
+  Russian_Politics.26.t:0 "The Duma Burns"
+  Russian_Politics.26.d:0 "PLACEHOLDER Though at significant cost, the Loyalists retook the Duma and arrested or eliminated the plotters. The Moscow Circle collapses under public backlash."
+  Russian_Politics.26.a:0 "A nascent democracy saved, but at what cost?"
+
   Russian_Assassination_Attempt.1.t:0 "Redemption Day"
   Russian_Assassination_Attempt.1.d:0 "It was hard to hear a portable radio over the sound of the crowd; an instrumental jazz tune hummed in one ear. She paid close attention to the notes, the warbling of the bass section, the trumpets blaring. As it all slowed to a close, an announcer with a thick Polish accent chimed in. It wasn’t the typical announcer, who at the moment was tied up in a broom closet.\n\n“Good morning, listeners. The time is eight AM. For those attending the parade this morning, the weather service has advised carrying a parasol due to the chance of rain. Don’t touch that dial now listeners, we’re just getting started with today’s catalogue-“\n\nKasandra flicked the radio off and dug her hands into her coat pockets, one hand withdrawing an old half burnt photograph. Two dirty looking children and their mother on a farm, smiling in squalor, faces distorted by melted film. The mother’s face was all but obscured by the charring; Kasandra couldn’t remember what she looked like.\n\nIn a few moments she was near the head of the crowd. The Tsar was off the podium, all smiles and shaking hands. A few nervous looking security agents orbited around him and shooed off the odd heckler. She made her way through the throng of people slowly, casually, pretending to try and get a better look. After a moment, she was within ten feet, the perfect distance.\n\nAs the Tsar made his way past, she casually slipped her hand into her pocket once more and withdrew a pistol. Seconds felt like hours now, adrenaline saturating as the sights leveled. One of the officers spotted her, sprinting towards the Tsar. Michael only had the briefest moment to glance at the commotion, eyes meeting the barrel of a gun. It was as if time stopped at that exact instant; an emperor faced with a peasant’s pistol. There wasn’t time to duck, all Michael could do was watch dumbfounded.\n\nOne barely audible prayer escaped the woman’s lips before she pulled the trigger.\n\n"God, please.""
   Russian_Assassination_Attempt.1.a:0 "The bullet strikes the Tsar!"
@@ -384,9 +428,9 @@
 
   Russia_Leadership.1.t:0 "An Empty Throne"
   Russia_Leadership.1.d:0 ""
-  Russia_Leadership.1.a:0 "Grand Duchess Xenia will ascend to Empress Regnant."
-  Russia_Leadership.1.b:0 "Grand Duke George shall become Tsar."
-  Russia_Leadership.1.c:0 "Grand Duchess Olga takes the reigns as Regnant."
+  Russia_Leadership.1.a:0 "Grand Duchess Xenia will ascend to Empress Regent."
+  Russia_Leadership.1.b:0 "Grand Duchess Olga takes the reigns as Regent."
+  Russia_Leadership.1.c:0 "Grand Duke George shall become Tsar."
 
   Russian_Flavour.1.t:0 "FNCC Settlement Magadan"
   Russian_Flavour.1.d:0 ""
@@ -620,6 +664,15 @@
   Russia_Rasputin.6.t:0 "Rasputin Survives the Swim"
   Russia_Rasputin.6.d:0 ""
   Russia_Rasputin.6.a:0 "Maybe he really is God?"
+
+  Russian_America.1.t:0 "Anger in the Americas"
+  Russian_America.1.d:0 ""
+  Russian_America.1.a:0 "What are they gonna do? Rebel?"
+
+  Russian_America.2.t:0 "The American Frontier Rebels"
+  Russian_America.2.d:0 ""
+  Russian_America.2.a:0 "Mobilize the Pacific Fleet!"
+  Russian_America.2.b:0 "Who cares about Alaska?"
 
   ##########################
   # GUI DESCRIPTIONS
