--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -4859,3 +4859,78 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   SGH_Reunified_ds_ADJ:0 "Chinese"
   SGH_Reunified_cn_ADJ:0 "Chinese"
   SGH_Reunified_an_ADJ:0 "Chinese"
+
+  ASK_Rebel_ni:0 "Alaskan Republic"
+  ASK_Rebel_ni_DEF:0 "The Alaskan Republic"
+  ASK_Rebel_ds:0 "Alaskan Republic"
+  ASK_Rebel_ds_DEF:0 "The Alaskan Republic"
+  ASK_Rebel_rc:0 "Alaskan Republic"
+  ASK_Rebel_rc_DEF:0 "The Alaskan Republic"
+  ASK_Rebel_an:0 "Alaskan Republic"
+  ASK_Rebel_an_DEF:0 "The Alaskan Republic"
+  ASK_Rebel_cn:0 "Alaskan Republic"
+  ASK_Rebel_cn_DEF:0 "The Alaskan Republic"
+  ASK_Rebel_lb:0 "Alaskan Republic"
+  ASK_Rebel_lb_DEF:0 "The Alaskan Republic"
+  ASK_Rebel_ss:0 "Alaskan Republic"
+  ASK_Rebel_ss_DEF:0 "The Alaskan Republic"
+  ASK_Rebel_jc:0 "Alaskan Republic"
+  ASK_Rebel_jc_DEF:0 "The Alaskan Republic"
+  ASK_Rebel_ni_ADJ:0 "Alaskan"
+  ASK_Rebel_rc_ADJ:0 "Alaskan"
+  ASK_Rebel_lb_ADJ:0 "Alaskan"
+  ASK_Rebel_ss_ADJ:0 "Alaskan"
+  ASK_Rebel_jc_ADJ:0 "Alaskan"
+  ASK_Rebel_ds_ADJ:0 "Alaskan"
+  ASK_Rebel_cn_ADJ:0 "Alaskan"
+  ASK_Rebel_an_ADJ:0 "Alaskan"
+
+  ASK_Occupied_ni:0 "General-Governate of Russian America"
+  ASK_Occupied_ni_DEF:0 "The General-Governate of Russian America"
+  ASK_Occupied_ds:0 "General-Governate of Russian America"
+  ASK_Occupied_ds_DEF:0 "The General-Governate of Russian America"
+  ASK_Occupied_rc:0 "General-Governate of Russian America"
+  ASK_Occupied_rc_DEF:0 "The General-Governate of Russian America"
+  ASK_Occupied_an:0 "General-Governate of Russian America"
+  ASK_Occupied_an_DEF:0 "The General-Governate of Russian America"
+  ASK_Occupied_cn:0 "General-Governate of Russian America"
+  ASK_Occupied_cn_DEF:0 "The General-Governate of Russian America"
+  ASK_Occupied_lb:0 "General-Governate of Russian America"
+  ASK_Occupied_lb_DEF:0 "The General-Governate of Russian America"
+  ASK_Occupied_ss:0 "General-Governate of Russian America"
+  ASK_Occupied_ss_DEF:0 "The General-Governate of Russian America"
+  ASK_Occupied_jc:0 "General-Governate of Russian America"
+  ASK_Occupied_jc_DEF:0 "The General-Governate of Russian America"
+  ASK_Occupied_ni_ADJ:0 "Russian-American"
+  ASK_Occupied_rc_ADJ:0 "Russian-American"
+  ASK_Occupied_lb_ADJ:0 "Russian-American"
+  ASK_Occupied_ss_ADJ:0 "Russian-American"
+  ASK_Occupied_jc_ADJ:0 "Russian-American"
+  ASK_Occupied_ds_ADJ:0 "Russian-American"
+  ASK_Occupied_cn_ADJ:0 "Russian-American"
+  ASK_Occupied_an_ADJ:0 "Russian-American"
+
+  ASK_Russia_ni:0 "Russian Republic"
+  ASK_Russia_ni_DEF:0 "The Russian Democratic Federative Republic"
+  ASK_Russia_ds:0 "Russian Republic"
+  ASK_Russia_ds_DEF:0 "The Russian Democratic Federative Republic"
+  ASK_Russia_rc:0 "Russian Republic"
+  ASK_Russia_rc_DEF:0 "The Russian Democratic Federative Republic"
+  ASK_Russia_an:0 "Russian Republic"
+  ASK_Russia_an_DEF:0 "The Russian Democratic Federative Republic"
+  ASK_Russia_cn:0 "Russian Republic"
+  ASK_Russia_cn_DEF:0 "The Russian Democratic Federative Republic"
+  ASK_Russia_lb:0 "Russian Republic"
+  ASK_Russia_lb_DEF:0 "The Russian Democratic Federative Republic"
+  ASK_Russia_ss:0 "Russian Republic"
+  ASK_Russia_ss_DEF:0 "The Russian Democratic Federative Republic"
+  ASK_Russia_jc:0 "Russian Republic"
+  ASK_Russia_jc_DEF:0 "The Russian Democratic Federative Republic"
+  ASK_Russia_ni_ADJ:0 "Russian-American"
+  ASK_Russia_rc_ADJ:0 "Russian-American"
+  ASK_Russia_lb_ADJ:0 "Russian-American"
+  ASK_Russia_ss_ADJ:0 "Russian-American"
+  ASK_Russia_jc_ADJ:0 "Russian-American"
+  ASK_Russia_ds_ADJ:0 "Russian-American"
+  ASK_Russia_cn_ADJ:0 "Russian-American"
+  ASK_Russia_an_ADJ:0 "Russian-American"
