--- a/localisation/english/PB_war_l_english.yml
+++ b/localisation/english/PB_war_l_english.yml
@@ -96,3 +96,6 @@ WAR_NAME_KUM_SIK:0 "The Western Plains War"
 
 WAR_NAME_RUS_PER:0 "The Russian Invasion of Iran"
 WAR_NAME_PER_RUS:0 "The Russian Invasion of Iran"
+
+WAR_NAME_ASK_RUS:0 "The Alaskan War of Independence"
+WAR_NAME_RUS_ASK:0 "The Alaskan War of Independence"
