some VP railway stuff

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -655,7 +655,7 @@
  STATE_654:0 "Gorno-Ulala"
  STATE_655:0 "North Karafuto"
  STATE_656:0 "Kuwait"
- STATE_657:0 "Birobidzhan"
+ STATE_657:0 "Tikhonkaya"
  STATE_658:0 "Abu Dhabi"
  STATE_659:0 "Aden"
  STATE_660:0 "Bangui"
