--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -664,6 +664,11 @@
  VICTORY_POINTS_1770:0 "Des Moines"
  VICTORY_POINTS_1806:0 "New Charleston"
  VICTORY_POINTS_1836:0 "Bismarck"
+ VICTORY_POINTS_7763:0 "Blagoveshchensk"
+ VICTORY_POINTS_12678:0 "TTikhonkaya"
+ VICTORY_POINTS_12263:0 "Permskoye"
+ VICTORY_POINTS_12654:0 "Belogorsk"
+ VICTORY_POINTS_7851:0 "Ruchlowo"
  VICTORY_POINTS_1843:0 "Miami"
  VICTORY_POINTS_1866:0 "Bde Óta Othúŋwe"
  VICTORY_POINTS_3960:0 "Istres"
