--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -1459,6 +1459,7 @@
   PB_Moscow_Circle_Ascendancy_3:0 "Moscow Circle Presence - Complete Dominance"
   PB_RUS_Mobilize_Youth_tt:0 "\nThe §YBlack Hundredists§! support Company offers double the suppression when compared to the §YMilitary Police§! support company and also requires less equipment.\n\nCreate §HBlack Hundredist Secruity Battalion§! division template:\n§YCombat§!\n - Light Infantry\n - Light Infantry\n - Light Infantry\n§YSupport§!\n - Black Hundredists Support Company "
   PB_RUS_Russian_Renaissance_tt:0 "§YGreater Russian (Gr. Russian)§! becomes the §Gmain culture§! of [ROOT.GetNameDef]\n\n"
+  PB_RUS_Change_German_Suffix_tt:0 "Changes §RGerman suffixes§! in various place names to §YRussian§! ones"
   
   PB_RUS_Spector_Of_The_East_tt:0 "\nLevel three coastal forts will be built in every coastal province in §YVladivostok§! and §YAmur§!\n\nThe §RJapanese§! AI is less likely to naval invade Russia\n\n"
   PB_RUS_Sib_Vet_tt:0 "Every §HUnit Leader§! with the §bSiberian Veteran§! £GFX_sib_front_ti  trait will gain the following:"
