New Siberian Resource Cities

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -669,6 +669,10 @@
  VICTORY_POINTS_12263:0 "Permskoye"
  VICTORY_POINTS_12654:0 "Belogorsk"
  VICTORY_POINTS_7851:0 "Ruchlowo"
+ VICTORY_POINTS_9338:0 "Simbirsk"
+ VICTORY_POINTS_4817:0 "Surgut"
+ VICTORY_POINTS_4659:0 "Tobolsk"
+ VICTORY_POINTS_1845:0 "Tynda"
  VICTORY_POINTS_1843:0 "Miami"
  VICTORY_POINTS_1866:0 "Bde Óta Othúŋwe"
  VICTORY_POINTS_3960:0 "Istres"
