--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -668,7 +668,7 @@
  VICTORY_POINTS_12678:0 "Tikhonkaya"
  VICTORY_POINTS_12263:0 "Permskoye"
  VICTORY_POINTS_12654:0 "Belogorsk"
- VICTORY_POINTS_7851:0 "Ruchlowo"
+ VICTORY_POINTS_7851:0 "Ruchlovo"
  VICTORY_POINTS_9338:0 "Simbirsk"
  VICTORY_POINTS_4817:0 "Surgut"
  VICTORY_POINTS_4659:0 "Tobolsk"
