Prussia loc finished and some bugfixes

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -1178,7 +1178,7 @@
   PBNews.302.a:0 "The sun will never set"
 
   PBNews.303.t:0 "DESERT DEATH IN BRAZIL"
-  PBNews.303.d:0 "The degradation of the lands on the South American Continent continues. The Sand and Dust Storms have only growing stronger and bigger and terraforming the terrain of the continent. With the progressing desertification the Northeast of Brazil is becoming more like the Sahara every year. Scientists do not believe that this process can be stopped anymore and politicians encourage more people to settle into the Amazonian interior for better livelyhoods.\n\nThis year the storms have become especially devastating in Brazil lasting for more then five weeks in some areas."
+  PBNews.303.d:0 "The degradation of the lands on the South American Continent has reached apocalyptic levels. Sand and Dust Storms have become more violent and destructive as the effects of the Green Sahara project continue to negatively influence the climate of the South American region. Scientists do not believe that this process can be stopped anymore and politicians encourage more people to settle into the Amazonian interior for better livelihoods.\n\nThis year the storms have become especially devastating in Brazil lasting for more than five weeks in some areas."
   PBNews.303.a:0 "The Cursed Continent"
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
