--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -194,34 +194,57 @@
  modern_tank_destroyer_equipment_1_desc:0 "Modern Landship Destroyers are an evolution of earlier light and medium LDs, preferring mobility and stealth to heavy armor."
 
  gw_automat_archetype:0 "Automats"
+ gw_automat_chassis:0 "Light Duopod Chassis"
 
  gw_automat_0:0 "Great War Automat"
+ gw_automat_chassis_0:0 "Great War Automat Chassis"
  gw_automat_0_desc:0 "The Great War spawned many new creations in warfare, the most famous one being the Automat Machines. Developed to outflank the enemy and accurately hit static enemy targets, the Automat is one of the greatest breakthroughs in military history. However the Great War Designs have several flaws. The armor is too thin, the structure too unreliable, the engines consume to much fuel for a short distance and furthermore there are still problems with the stability of the legs. But it is solid foundation. A foundation which we can improve upon."
+ gw_automat_chassis_0_desc:0 "$gw_automat_0_desc$"
  gw_automat_archetype_desc:0 "The Great War spawned many new creations in warfare, the most famous one being the Automat Machines. Developed to outflank the enemy and accurately hit static enemy targets, the Automat is one of the greatest breakthroughs in military history. However the Great War Designs have several flaws. The armor is too thin, the structure too unreliable, the engines consume to much fuel for a short distance and furthermore there are still problems with the stability of the legs. But it is solid foundation. A foundation which we can improve upon."
  gw_automat_1:0 "Light Duopod I"
+ gw_automat_chassis_1:0 "Light Duopod I Chassis"
  gw_automat_1_desc:0 "The Duopod is the culmination of fixing the mistakes of our Great War automats. Fixing the instability of the design and turning it into a faster, sleaker weapon. While it still sports the thin armor of its predecessor, the Light Duopod remains a cheap and fast option to add to our impressive arsenal. \n\n" 
+ gw_automat_chassis_1_desc:0 "$gw_automat_1_desc$"
  gw_automat_2:0 "Light Duopod II"
+ gw_automat_chassis_2:0 "Light Duopod II Chassis"
  gw_automat_2_desc:0 "The Mark II of the Light Duopod is furthering the design philosophy of the very first Duopod. Turning the flaws of the first Automats on their head, the Mark II further stabilizes the wonky \"legs\" of the machine, allowing for greater speeds and breakthrough. While the light armor gets a slight improvement over the old Duopod design, the Mark II still sports a slender and light armor design, allowing it to be produced even cheaper than the old Duopods."
+ gw_automat_chassis_2_desc:0 "$gw_automat_2_desc$"
  gw_automat_3:0 "Light Duopod III"
+ gw_automat_chassis_3:0 "Light Duopod III Chassis"
  gw_automat_3_desc:0 "The third variant of the Light Duopod exemplifies the perfecting of a craft. Mark III improves upon the characteristics of the old Duopods immensely, using more standardized parts that keep production costs low and the machine reliable. The perfecting of the Duopod's two legged transportation allows this version to reach speeds of 11/km per hour, turning it into a speed devil unmatched to most on the battlefield."
+ gw_automat_chassis_3_desc:0 "$gw_automat_3_desc$"
 
  tripod_automat_archetype:0  "Tripods"
+ tripod_automat_chassis:0 "Tripod Chassis"
 
  tripod_automat_0:0 "Tripod I"
+ tripod_automat_chassis_0:0 "Tripod I Chassis"
  tripod_automat_0_desc:0 "The Tripod is an unusual weapon, created out of a compromise of the old Great War automats: the issues of stabilization, light armor and fuel usage forced designers into either two camps of either Duopods or Quadropods. The Tripod breaks this trend as a jack-of-all-trades: more stable than the duopods and faster than the quadropod. However, as a compromise, the Tripod doesn't exhibit the heavy armor or firepower of the Quadropod, nor does it have the speed or low production cost of the Duopod."
+ tripod_automat_chassis_0_desc:0 "$tripod_automat_0_desc$"
  tripod_automat_1:0 "Tripod II"
+ tripod_automat_chassis_1:0 "Tripod II Chassis"
  tripod_automat_1_desc:0 "Being a big improvement on the original compromise of the Tripod I, the Mark II of this weapon expands upon the original design in every way. Heavier armor, bigger guns, better material and even slightly faster, the Tripod II was made to be the ultimate weapon on the battlefield."
+ tripod_automat_chassis_1_desc:0 "$tripod_automat_1_desc$"
  tripod_automat_2:0 "Tripod III"
+ tripod_automat_chassis_2:0 "Tripod III Chassis"
  tripod_automat_2_desc:0 ""
+ tripod_automat_chassis_2_desc:0 "$tripod_automat_2_desc$"
 
  quadropod_automat_archetype:0 "Quadropod"
+ quadropod_automat_chassis:0 "Quadropod Chassis"
 
  quadropod_automat_0:0 "Quadropod I"
+ quadropod_automat_chassis_0:0 "Quadropod I Chassis"
  quadropod_automat_0_desc:0 "Few things can truly spit in the face of God, but one can easily count the Quadropod among these god-smiting things. Solving the Great War issue of the automats with the answer of \"more legs, more armor\", the Quadropod is simply a walking battleship, equiped with guns previously used on cruisers. Still the design has flaws, as the Quadropod currently stands as a big, slow object, making it a prime target for artillery and planes." 
+ quadropod_automat_chassis_0_desc:0 "$quadropod_automat_0_desc$" 
  quadropod_automat_1:0 "Quadropod II"
+ quadropod_automat_chassis_1:0 "Quadropod II Chassis"
  quadropod_automat_1_desc:0 ""
+ quadropod_automat_chassis_1_desc:0 "$quadropod_automat_1_desc$"
  quadropod_automat_2:0 "Quadropod III"
+ quadropod_automat_chassis_2:0 "Quadropod III Chassis"
  quadropod_automat_2_desc:0 ""
+ quadropod_automat_chassis_2_desc:0 "$quadropod_automat_2_desc$"
 
  infantry_rations_equipment_desc:0 "Standard Rationing to keep our soldiers fed in the field."
 
@@ -439,6 +462,8 @@
  EQUIPMENT_MODULE_NOT_ALLOWED:0 "§RUnavailable§!"
  tank_nsb_engine_upgrade:0 "$tank_engine_upgrade$"
  tank_nsb_armor_upgrade:0 "$tank_armor_upgrade$"
+ mech_nsb_engine_upgrade:0 "$tank_engine_upgrade$"
+ mech_nsb_armor_upgrade:0 "$tank_armor_upgrade$"
 
  train_equipment:0 "Train"
  train_equipment_desc:0 "Trains transport supplies from the Supply Capital to Supply Hubs connected by rail."
@@ -503,18 +528,32 @@ scout_plane_equipment_2:0 "Scout Drone II"
 
 transport_chopper_equipment:0 "Transport Buzzard"
 transport_chopper_equipment_desc:0 "A somewhat primitive design, the Great War Buzzard, named after the comparison of its sound to that of a colony of bees, was utilized in specific parts of the European theater during the 1910s. Seeing service in Iberia and Italy, the Buzzard was useful for supplying troops across the sea."
+transport_chopper_airframe:0 "Transport Buzzard Airframe"
+transport_chopper_airframe_desc:0 "$transport_chopper_equipment_desc$"
 transport_chopper_equipment_1:0 "Great War Buzzard"
+transport_chopper_airframe_1:0 "Great War Buzzard Airframe"
 transport_chopper_equipment_2:0 "Buzzard II"
 transport_chopper_equipment_2_desc:0 "Improving upon the Great War design, the Buzzard Mrk II. is an improvement in its abilities to supply and transport troops across small distances. More nimble and swifter than its Great War grandpa, the Mrk II. seems perfect for any coming conflict."
+transport_chopper_airframe_2:0 "Buzzard II Airframe"
+transport_chopper_airframe_2_desc:0 "$transport_chopper_equipment_2_desc$"
 transport_chopper_equipment_3:0 "Buzzard III"
 transport_chopper_equipment_3_desc:0 "Being an immense step forward from the Mrk II., the Buzzard III utilizes two systems of rotary blade engines, creating a relatively fast and agile alternative to previous generations of transport aircraft. This \"Hooper\", as it has been called by soldiers, is the right tool for the job."
+transport_chopper_airframe_3:0 "Buzzard III Airframe"
+transport_chopper_airframe_3_desc:0 "$transport_chopper_equipment_3_desc$"
 attack_chopper_equipment:0 "Attack Buzzard"
+attack_chopper_airframe:0 "Attack Buzzard Airframe"
 attack_chopper_equipment_1:0 "Airwulf I"
 attack_chopper_equipment_1_desc:0 "The Airwulf is a concept that has been dreamed of since the 1920s, when the military tried to further militarize the transportation technology it had acquired during the Great War. However, until very recently, issues of weight and speed slowed down the possibilities. The Airwulf I is thus a triumph over these problems, producing a cheap alternative alternative to CAS."
+attack_chopper_airframe_1:0 "Airwulf I Airframe"
+attack_chopper_airframe_1_desc:0 "$attack_chopper_equipment_1_desc$"
 attack_chopper_equipment_2:0 "Airwulf II"
 attack_chopper_equipment_2_desc:0 "As we continue to further our understanding of the laws of physics, our progress on the Airwulf improves. Airwulf II improves on the failings of the first Airwulf system in immense ways, producing an attack buzzard capable of flying further distances and isolating pockets more efficiently." 
+attack_chopper_airframe_2:0 "Airwulf II Airframe"
+attack_chopper_airframe_2_desc:0 "$attack_chopper_equipment_2_desc$" 
 attack_chopper_equipment_3:0 "Airwulf III"
 attack_chopper_equipment_3_desc:0 "A marvel on the battlefield and a dreadful sound to hear for the enemy, the Airwulf III is the one of the fastest buzzards created by humanity. A strikingly good alternative to CAS due to its low costs, the Airwulf III proves to be the future of warfare."
+attack_chopper_airframe_3:0 "Airwulf III Airframe"
+attack_chopper_airframe_3_desc:0 "$attack_chopper_equipment_3_desc$"
 attack_chopper:0 "Attack Buzzard"
 attack_chopper_desc:0 ""
 transport_chopper:0 "Transport Buzzard"
@@ -539,6 +578,17 @@ tank_engine_upgrade:0 "Engine"
 tank_engine_upgrade_desc:0 "More mobility give tactical and strategic advantages, as well as allowing more armor without being slowed down significantly."
 ac_engine_upgrade:0 "Engine"
 ac_engine_upgrade_desc:0 "More mobility give tactical and strategic advantages, as well as allowing more armor without being slowed down significantly."
+
+mech_armor_upgrade:0 "Armor"
+mech_armor_upgrade_desc:0 "Better armor than your enemies can penetrate is a huge advantage to your divisions but is probably going to slow you down."
+mech_gun_upgrade:0 "Main Gun"
+mech_gun_upgrade_desc:0 "It's important to have a gun that keep up with enemy armor strength and can penetrate."
+mech_engine_upgrade:0 "Engine"
+mech_engine_upgrade_desc:0 "More mobility give tactical and strategic advantages, as well as allowing more armor without being slowed down significantly."
+mech_reliability_upgrade:0 "Reliability"
+mech_reliability_upgrade_desc:1 "Improving reliability leads to less broken down equipment you'll need to replace."
+
+
 ship_gun_upgrade:0 "Gun"
 ship_gun_upgrade_desc:0 "It's important to have a gun that keep up with enemy armor strength and can penetrate."
 ship_torpedo_upgrade:0 "Torpedo"
