Bugfixing around the globe

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -93,6 +93,9 @@ PB_Operation_Power_Pack:0 "Operation POWER PACK"
 PB_AME_Domestic_Policy:0 "Managing Domestic Policy"
 PB_AME_Domestic_Policy_desc:0 "\n\n\n\n\n\nThe United Commonwealth's domestic policies are generally managed by supporting or discouraging particular interest groups. These groups maintain significant lobbying influence on their provincial and national parliaments, ergo keeping their favor is key for conducting the government as we desire. There are currently six major groups that hold influence in this manner.\n\nFreedmen represent the provinces primarily controlled by AfrRam groups, standing in opposition to the larger Southern lobby that controls most of the Old South.\n\nWarhawks represent the expansionist elements of the government, and keeping them empowered will allow us a freer hand in using force for diplomacy. Peaceniks, naturally, will attempt to restrain military action in diplomacy whenever possible.\n\nMegacorporations represent the influence of corporate groups on the Commonwealth, opposed by various trade unions. While the Unions lack the international influence of the Megacorps, they still represent a critical voting block for parliament.\n\n[get_freedmen_support]\n\n[get_dixie_support]\n\n[get_warhawk_support]\n\n[get_peacenik_support]\n\n[get_megacorp_support]\n\n[get_union_support]\n"
 
+PB_AME_Manifest_Destiny:0 "Manifest Destiny"
+PB_AME_Manifest_Destiny_desc:0 "The American People will not be hold back by the Mississippi any longer. The time has come to bring order and meaning to the wasteland of anarchy to the West."
+
 AME_Freedmen_Support_Government:0 "The £UC_SI_Freedmen §YFreedmen§! are §Gloyal§! to us | §G[?AME.AME_Freedmen_Support]%§! | £GFX_pol_power §G[?AME.free_political_variable]%§! | £GFX_resources_to_market_icon §G[?AME.free_core_variable]%§!"
 AME_Freedmen_Neutral_Government:0 "The £UC_SI_Freedmen §YFreedmen§! are §Yneutral§! towards us | §Y[?AME.AME_Freedmen_Support]%§! | £GFX_pol_power §Y[?AME.free_political_variable]%§! | £GFX_resources_to_market_icon §Y[?AME.free_core_variable]%§!"
 AME_Freedmen_Dislike_Government:0 "The £UC_SI_Freedmen §YFreedmen§! are not §Rloyal§! towards us | §R[?AME.AME_Freedmen_Support]%§! | £GFX_pol_power §R[?AME.free_political_variable]%§! | £GFX_resources_to_market_icon §R[?AME.free_core_variable]%§!"
@@ -164,6 +167,16 @@ PB_EIEC_Expansion_Targets:0 "£UC_SI_Corporate Acquire Edison Expansion contract
 PB_Megacorps_Ford_Production_Quotas:0 "£UC_SI_Corporate Request Higher Production Quotas"
 PB_Megacorps_Union_Standard_Imports:0 "£UC_SI_Corporate Establish a Union Standard Import Line"
 PB_Support_American_Texas:0 "[ATX.GetFlag] Support American Texas"
+
+PB_Go_West_Speech:0 "'Destiny in the West' Speech"
+PB_Go_West_Speech_desc:0 "'Destiny in the West' Speech"
+go_west_speech_flag_tooltip:0 "§BProclaimed Manifest Destiny§!"
+PB_End_New_Dixie_Threat:0 "End the Dixie Threat"
+PB_End_New_Dixie_Threat_desc:0 "End the Dixie Threat"
+PB_Subjugate_Marooner:0 "Demand Marooner Loyalty"
+PB_Subjugate_Marooner_desc:0 "Demand Marooner Loyalty"
+PB_Subjugate_Osage:0 "Stabilize the Osage"
+PB_Subjugate_Osage_desc:0 "Stabilize the Osage"
 
 PB_AME_Clone_Program_Start:0 "Re-Activate the Tuskegee Program"
 PB_AME_Clone_Program_Sampling_1:0 "Collect Genetic Samples in the Melbourne Arcoplex"
