British East Africa Rises (Guh?)

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -656,6 +656,11 @@
  VICTORY_POINTS_9450:0 "Chicagou"
  VICTORY_POINTS_10583:0 "Bodaybo"
  VICTORY_POINTS_1794:0 "Barnaul"
+ VICTORY_POINTS_6027:0 "Livingstone"
+ VICTORY_POINTS_10761:0 "Garissa"
+ VICTORY_POINTS_5160:0 "Kisumu"
+ VICTORY_POINTS_10962:0 "Nakuru"
+ VICTORY_POINTS_13338:0 "Malindi"
  VICTORY_POINTS_9814:0 "Los Angeles"
  VICTORY_POINTS_10337:0 "Crosnier"
  VICTORY_POINTS_788:0 "Norfolk"
@@ -1019,7 +1024,19 @@
  VICTORY_POINTS_4403:0 "Gannan"
  VICTORY_POINTS_1933:0 "Tianshui"
  VICTORY_POINTS_1647:0 "Pingliang"
- VICTORY_POINTS_12991:0 "Mogadíscio"
+ VICTORY_POINTS_12991:0 "Mogadishu"
+ VICTORY_POINTS_10833:0 "Berbera"
+ VICTORY_POINTS_5068:0 "Hargeysa"
+ VICTORY_POINTS_4909:0 "Garoowe"
+ VICTORY_POINTS_10928:0 "Merka"
+ VICTORY_POINTS_12941:0 "Kismaayo"
+ VICTORY_POINTS_12840:0 "Hobyo"
+ VICTORY_POINTS_8223:0 "Gulu"
+ VICTORY_POINTS_10764:0 "Wau"
+ VICTORY_POINTS_10877:0 "Bor"
+ VICTORY_POINTS_1960:0 "Nyala"
+ VICTORY_POINTS_8103:0 "Faschoda"
+ VICTORY_POINTS_10827:0 "El Obeid"
  VICTORY_POINTS_6318:0 "Manchester"
  VICTORY_POINTS_9315:0 "Sheffield"
  VICTORY_POINTS_11405:0 "Aleksandrovsk"
