--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1026,16 +1026,16 @@
  VICTORY_POINTS_1647:0 "Pingliang"
  VICTORY_POINTS_12991:0 "Mogadishu"
  VICTORY_POINTS_10833:0 "Berbera"
- VICTORY_POINTS_5068:0 "Hargeysa"
+ VICTORY_POINTS_5068:0 "Hargeisa"
  VICTORY_POINTS_4909:0 "Garoowe"
  VICTORY_POINTS_10928:0 "Merka"
- VICTORY_POINTS_12941:0 "Kismaayo"
+ VICTORY_POINTS_12941:0 "Kismayo"
  VICTORY_POINTS_12840:0 "Hobyo"
  VICTORY_POINTS_8223:0 "Gulu"
  VICTORY_POINTS_10764:0 "Wau"
  VICTORY_POINTS_10877:0 "Bor"
  VICTORY_POINTS_1960:0 "Nyala"
- VICTORY_POINTS_8103:0 "Faschoda"
+ VICTORY_POINTS_8103:0 "Fashoda"
  VICTORY_POINTS_10827:0 "El Obeid"
  VICTORY_POINTS_6318:0 "Manchester"
  VICTORY_POINTS_9315:0 "Sheffield"
