small russia post-war tree push

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -144,6 +144,7 @@
   PB_RUS_Empress_Regent:0 "Empress Regent"
   PB_RUS_Charitable:0 "Charitable"
   PB_RUS_Sickly:0 "Sickly"
+  PB_RUS_Soverign_Of_The_New_World_Order:0 "Soverign Of The New World Order"
 
   ##########################
   # IDEAS
@@ -1526,6 +1527,15 @@
   PB_RUS_Safeguard_The_Artic_tt:0 "\nIf §YSweden§! agrees to sign a §GNon-Aggression Pact§! with us and §RFinland§! still exists then §RFinland§! will lose the §YScandinavian Support§! national spirit"
  
   PB_RUS_Grestin_To_Do:0 "§CGrestin§! centric focus - code in the effects and availability checks when possible =)"
+
+  PB_RUS_FRA_New_Alliance:0 "Continental Accord"
+  PB_RUS_New_Alliance:0 "Institute For Eurasian Security"
+  PB_RUS_FRA_New_Alliance_tt:0 "§HPacte Revanchiste§! will now be known as the §HContinental Accord§!"
+  PB_RUS_New_Alliance_tt:0 "§HTsargrad Accords§! will now be known as the §HInstitute For Eurasian Security§!"
+  PB_RUS_Imperial_Duopoly_tt:0 "§GTesla Electricworks§! becomes the dominant megacorp in France"
+  PB_RUS_If_In_Alliance:0 "If §Ywe are in§! the §HPacte Revanchiste§! alliance then the following benefits will be added:\n "
+  PB_RUS_If_Not_In_Alliance:0 "\nIf §Ywe are not§! in the §HPacte Revanchiste§! alliance then the following benefits will be added:\n "
+
   #######################
   # ARMY SPIRITS
   #######################
