saving this nothing important

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -89,6 +89,12 @@ PB_Increase_Troop_Deployments:0 "Increase Troop Deployments"
 PB_Ship_Weapons_South:0 "Send a Weapons Shipment"
 PB_Operation_Screaming_Fist:0 "Operation SCREAMING FIST"
 PB_Operation_Power_Pack:0 "Operation POWER PACK"
+PB_The_Command_of_Pacification_NIC:0 "Issue PM-OSEC Orders"
+PB_The_Command_of_Pacification_NIC_desc:0 "The Prime Minister of the United Commonwealth has several specific emergency levers he can use to funnel more material or political support into Nicaragua."
+
+PB_AME_decision_cost_NIC_command:0 "£command_power  §R50§!"
+PB_AME_decision_cost_NIC_command_blocked:0 "£command_power  §R50§!"
+PB_AME_decision_cost_NIC_command_tooltip:0 "It costs £command_power  §R50§! to take the decision"
 
 PB_AME_Domestic_Policy:0 "Managing Domestic Policy"
 PB_AME_Domestic_Policy_desc:0 "\n\n\n\n\n\nThe United Commonwealth's domestic policies are generally managed by supporting or discouraging particular interest groups. These groups maintain significant lobbying influence on their provincial and national parliaments, ergo keeping their favor is key for conducting the government as we desire. There are currently six major groups that hold influence in this manner.\n\nFreedmen represent the provinces primarily controlled by AfrRam groups, standing in opposition to the larger Southern lobby that controls most of the Old South.\n\nWarhawks represent the expansionist elements of the government, and keeping them empowered will allow us a freer hand in using force for diplomacy. Peaceniks, naturally, will attempt to restrain military action in diplomacy whenever possible.\n\nMegacorporations represent the influence of corporate groups on the Commonwealth, opposed by various trade unions. While the Unions lack the international influence of the Megacorps, they still represent a critical voting block for parliament.\n\n[get_freedmen_support]\n\n[get_dixie_support]\n\n[get_warhawk_support]\n\n[get_peacenik_support]\n\n[get_megacorp_support]\n\n[get_union_support]\n"
