--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -55,6 +55,11 @@ Culture_Conversion: "Culture Conversion/Acceptance"
 
 culture_map_mode: "Culture Map"
 
+## -------- Scripted Effect Tooltips -------- ##
+PB_Cultures_change_culture_of_state_tt: "Convert the culture of §Y[THIS.GetName]§! from §Y[?culture_token.GetTokenLocalizedKey]§! to §Y[?temp_culture.GetTokenLocalizedKey]§!."
+PB_Cultures_add_accepted_culture_tt: "Adds §Y[?temp_culture.GetTokenLocalizedKey]§! as an accepted culture of §Y[THIS.GetNameWithFlag]§!."
+PB_Cultures_remove_accepted_culture_tt: "Removes §Y[?temp_culture.GetTokenLocalizedKey]§! as an accepted culture of §Y[THIS.GetNameWithFlag]§!."
+
 ## -------- Simple View -------- ##
 PB_Culture_Expanded_Lore_tt: "This state's majority culture is: §Y[?culture_token.GetTokenLocalizedKey]§!"
 PB_Culture_Expanded_Lore_tt_delayed: "[get_PB_Culture_Loc_Delayed]"
