--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -979,3 +979,19 @@
   PRS_German_Empire:0 "German Empire"
   PRS_German_Empire_DEF:0 "the German Empire"
   PRS_German_Empire_ADJ:0 "German"
+
+  ##########################
+  # COSMETIC TAGS PUPPETS
+  ##########################
+
+  SDW_Prussian_Vassal:0 "Südwestafrika"
+  SDW_Prussian_Vassal_DEF:0 "The Colony of Deutsch-Südwestafrika"
+  SDW_Prussian_Vassal_ADJ:0 "Südwestafrikan"
+
+  DAS_Prussian_Vassal:0 "German Pacific Commonwealth"
+  DAS_Prussian_Vassal_DEF:0 "The Colony of German Central Africa"
+  DAS_Prussian_Vassal_ADJ:0 "Australo-German"
+
+  DAF_Prussian_Vassal:0 "German Central Africa"
+  DAF_Prussian_Vassal_DEF:0 "The German Pacific Commonwealth"
+  DAF_Prussian_Vassal_ADJ:0 "German-African"
