--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -827,21 +827,21 @@
  BAF_an_ADJ:0 "Afro-British"
 
  DAF_ni:0 "German Central Africa"
- DAF_ni_DEF:0 "The Colony German Central Africa"
+ DAF_ni_DEF:0 "The Colony of German Central Africa"
  DAF_ds:0 "German Central Africa"
- DAF_ds_DEF:0 "The Colony German Central Africa"
+ DAF_ds_DEF:0 "The Colony of German Central Africa"
  DAF_rc:0 "German Central Africa"
- DAF_rc_DEF:0 "The Colony German Central Africa"
+ DAF_rc_DEF:0 "The Colony of German Central Africa"
  DAF_an:0 "German Central Africa"
- DAF_an_DEF:0 "The Colony German Central Africa"
+ DAF_an_DEF:0 "The Colony of German Central Africa"
  DAF_cn:0 "German Central Africa"
- DAF_cn_DEF:0 "The Colony German Central Africa"
+ DAF_cn_DEF:0 "The Colony of German Central Africa"
  DAF_lb:0 "German Central Africa"
- DAF_lb_DEF:0 "The Colony German Central Africa"
+ DAF_lb_DEF:0 "The Colony of German Central Africa"
  DAF_ss:0 "German Central Africa"
- DAF_ss_DEF:0 "The Colony German Central Africa"
+ DAF_ss_DEF:0 "The Colony of German Central Africa"
  DAF_jc:0 "German Central Africa"
- DAF_jc_DEF:0 "The Colony German Central Africa"
+ DAF_jc_DEF:0 "The Colony of German Central Africa"
  DAF_ni_ADJ:0 "German-African"
  DAF_rc_ADJ:0 "German-African"
  DAF_lb_ADJ:0 "German-African"
