supertechs, bugfixing, correct sounds frequency

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -1538,6 +1538,12 @@
   flexible_organization_spirit_Russia:0 "Flexible Organization"
 
   #######################
+  # ABILITIES
+  #######################
+  ABILITY_FANATICAL_CHARGE: "Fanatical Charge"
+  ABILITY_FANATICAL_CHARGE_DESC: "Fanatical Charge"
+
+  #######################
   # DYNAMIC MODIFIERS
   #######################
   RUS_Industrial_Stasis:0 "Industrial Stasis"
