--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -1334,6 +1334,7 @@
   PB_RUS_Weakened_Public_Support:0 "Rasputin Has Lost Public Support"
   PB_RUS_Scouted_Rasputin:0 "Rasputin's Exact Whereabouts Have Been Discovered"
   PB_RUS_Prepared_Operation:0 "The Soldiers Are Ready"
+  PB_RUS_Blessing_Active:0 "Has Active Blessing"
   
   ########################## 
   # TOOLTIPS
