--- a/localisation/english/PB_Super_Technologies_l_english.yml
+++ b/localisation/english/PB_Super_Technologies_l_english.yml
@@ -41,5 +41,6 @@
 
 ### TOOLTIPS ###
   recursive_immortality_tech_tt: "Every current and future army leader will gain §YRecursive Immortality§! trait which grants:\n Chance to Get Sick: §G-75.00%§!\n Chance to get wounded in combat: §G-75.00%§!"
+  clinical_immortality_tech_tt: "Every current and future army leader will gain §YClinical Immortality§! trait which grants:\n Chance to Get Sick: §G-75.00%§!\n Chance to get wounded in combat: §G-75.00%§!"
   god_engine_tech_tt: "New §YBlessing§! becomes available every §YSix Months§!\nUnlocks the §YFanatical Charge§! General Ability"
   materiosynthetics_tech_tt: "Unlocks §YMateriosynthetics§! research branch with two additional technologies in the §YIndustry Tab§!\nEach level grants one additional §YMetal Resource§!"
