--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1022,6 +1022,7 @@
   PB_Invite_Sweden:0 "[SWE.GetFlag] §CDiplomatic Overtures to the Nordics§!"
   PB_Invite_Ottomans:0 "[TUR.GetFlag] §CA Mission to the Sublime Porte§!"
   PB_Invite_Persia:0 "[PER.GetFlag] §CPressure the Persians§!"
+  PB_Invite_Prussians:0 "[PRS.GetFlag] §CA Secure A Prussian Alliance§!"
 
   PB_ENG_Tory_Policy_Platform:0 "The Next Moves Forward"
   PB_ENG_Tory_Policy_Platform_desc:0 "The Tories have narrowly managed to cling on to power after the catastrophe of the Automation Crisis. With their slim majority in Parliament, the Tories can begin pushing the policies of their two principle leaders at the moment. Anthony Eden, the former prime minister, advocates for a status quo policy position and a fiscally conservative Britain, bordering on austerity. Samuel Hoare, on the other hand, leads the progressive faction of the Tories, arguing that Britain needs some form of welfare state in order to weather a future crisis."
