Prussia balancing and some Russia stuff

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -70,6 +70,7 @@
   PB_Junker_Support:0 "Junker Support"
   PB_The_Overseer:0 "The Overseer"
   PB_The_Hero_Of_Our_Time:0 "§CThe Hero Of Our Time§!"
+  PB_PRS_Totaler_Krieg:0 "Totaler Krieg"
 
   ##########################
   # STATE MODIFIERS
@@ -457,6 +458,11 @@
 
   PB_PRS_Retained_Neo_Imperialist_High_Command:0 "Retained Neo-Imperialist High Command"
   PB_PRS_Retained_Neo_Imperialist_High_Command_2:0 "Retained Neo-Imperialist High Command"
+
+  PRS_Defence_Buff:0 "Defence Buff"
+  PRS_Defence_Buff_2:0 "Defence Buff"
+  PRS_Defence_Buff_3:0 "Defence Buff"
+  PRS_Defence_Buff_tt:0 "Permanently add §G+5%§! Division Defense on core territory"
 
   ##########################
   # Ministers/Generals/Tech Teams
