--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -145,6 +145,9 @@
   PB_RUS_Charitable:0 "Charitable"
   PB_RUS_Sickly:0 "Sickly"
   PB_RUS_Soverign_Of_The_New_World_Order:0 "Soverign Of The New World Order"
+  PB_RUS_Pragmatist:0 "Russia's Greatest Pragmatist"
+  PB_RUS_Anglophobe:0 "Anglophobe"
+  RUS_Michael_II_Desc:0 "§YBorn:§! 4/12/1878\n\n§YMichael II§! has served the throne for over fifteen years, his time spent as Russia’s newest Tsar has been one of continued reform, political radicalization, and economic growth. It is in these years that Russia has fundamentally transformed itself into one of the leading powers of the world, holding dominion over Eurasia and the Americas with one of the largest standing armies in the world. It was with this army in the war-torn fields of Siberia during the Great War where Russia spilt its fair share of blood against the encroaching Japanese forces, Michael’s father had known this fact well but failed to secure for the Russian Empire its well-deserved spoils of war. What Michael had inherited was a nation hungry to see its flag flying over London, its old allies repaying their long overdue debts, and most importantly of all, to see the Russian Empire achieve its ambitions of global dominance. Michael though is a pragmatic man, dreams of empire are often not achieved overnight, these processes take time, effort, and luck. Everyone Russian deep down knows what’s to come, as does their Tsar, Michael may have let the people of his empire enjoy the benefits of democracy, but this has come at a cost. Democracy for empire, that was the deal Michael made to his people, and its one he expects repayment on soon."
 
   ##########################
   # IDEAS
