--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -458,6 +458,11 @@ PB_ENG_ICAS:0 "Imperial Coal & Steel"
 PB_ENG_English_Electric:0 "EIEC - London"
 PB_ENG_IBC:0 "Imperial Broadcasting Corporation"
 ENG_vulcan_foundry_organization:0 "Vulcan Foundry"
+
+##########################
+# Prussia
+##########################
+
 PRS_Brummer_Organisation:0 "Brummer Fabrik"
 PRS_Royal_Konig_Organisation:0 "Royal Königsberg Armoury"
 PRS_Danzig_Waffen_Organisation:0 "Danzig Waffenschmiede"
@@ -467,6 +472,18 @@ PRS_albatros_organization:0 "Albatros Flugzeugwerke"
 PRS_werft_organization:0 "Werft zu Danzig"
 PRS_argus_organization:0 "Argus Bomber"
 PRS_nag_organization:0 "Neue Automobil Gesellschaft"
+
+##########################
+# Russia
+##########################
+
+RUS_tesla_armor_organization:0 "Tesla Armor"
+RUS_Tesla_Guns_Organisation:0 "Tesla Arms"
+RUS_dux_organization:0 "Dux Factory"
+RUS_Sikorsky_organization:0 "Sikorsky Aircraft"
+PB_RUS_Moto_Arty:0 "Motovilikha Plants"
+RUS_Fedorov_Organisation:0 "Fedorov Avtomat"
+PB_RUS_Niidar:0 "NIIDAR"
 
 ##########################
 # GERMANY - COLLAB AND LOYALIST
