--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -484,6 +484,10 @@ RUS_Sikorsky_organization:0 "Sikorsky Aircraft"
 PB_RUS_Moto_Arty:0 "Motovilikha Plants"
 RUS_Fedorov_Organisation:0 "Fedorov Avtomat"
 PB_RUS_Niidar:0 "NIIDAR"
+RUS_POR_organization:0 "Polikarpov"
+RUS_OKB_organization:0 "OKB"
+RUS_Iluyshin_organization:0 "Ilyushin Aviation Complex"
+RUS_Beriev_organization:0 "Beriev Aircraft Company"
 
 ##########################
 # GERMANY - COLLAB AND LOYALIST
