Russian MIOS finished

--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -492,6 +492,10 @@ RUS_Batlic_Shipyard_organization:0 "Baltic Shipyard"
 RUS_BlackSea_Shipyard_organization:0 "Nikolaev Shipyard"
 RUS_Dalzavod_Shipyard_organization:0 "Dalzavod Ship Centre"
 RUS_Sormovo_Shipyard_organization:0 "Sormovo Works"
+RUS_kharkiv_plant_organization:0 "ZTM"
+RUS_russo_balt_organization:0 "Russo-Balt"
+RUS_chelyabinsk_organization:0 "Chelyabinsk Tractor Plant"
+RUS_Putilov_organization:0 "Putilov Works"
 
 
 ##########################
