Prussia Germany Flavor

--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -484,10 +484,10 @@ RUS_Sikorsky_organization:0 "Sikorsky Aircraft"
 PB_RUS_Moto_Arty:0 "Motovilikha Plants"
 RUS_Fedorov_Organisation:0 "Fedorov Avtomat"
 PB_RUS_Niidar:0 "NIIDAR"
-RUS_POR_organization:0 "Polikarpov"
+RUS_POR_organization:0 "Polikarpov Aircraft Plant"
 RUS_OKB_organization:0 "OKB"
 RUS_Iluyshin_organization:0 "Ilyushin Aviation Complex"
-RUS_Beriev_organization:0 "Beriev Aircraft Company"
+RUS_Beriev_organization:0 "Beriev Aeronautical Company"
 RUS_Batlic_Shipyard_organization:0 "Baltic Shipyard"
 RUS_BlackSea_Shipyard_organization:0 "Nikolaev Shipyard"
 RUS_Dalzavod_Shipyard_organization:0 "Dalzavod Ship Centre"
@@ -496,6 +496,8 @@ RUS_kharkiv_plant_organization:0 "ZTM"
 RUS_russo_balt_organization:0 "Russo-Balt"
 RUS_chelyabinsk_organization:0 "Chelyabinsk Tractor Plant"
 RUS_Putilov_organization:0 "Putilov Works"
+
+PB_Tesla_Team:0 "Russia's Favored Son"
 
 
 ##########################
